<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#F9CCC6"
    android:padding="16dp"
    tools:context=".CreateNewIncome">

    <EditText
        android:id="@+id/editTextIncomeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_income_type"
        android:autofillHints="none"
        android:inputType="text"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:labelFor="@id/editTextIncomeType"
        />

    <EditText
        android:id="@+id/editTextNewIncomeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_income_amount"
        android:autofillHints="none"
        android:inputType="numberDecimal"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:paddingTop="8dp"
        android:labelFor="@id/editTextNewIncomeAmount"
        />

    <Button
        android:id="@+id/button_AddIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:minWidth="100dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewCreatedIncome"
        android:layout_width="338dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_incomeCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_cancel"
        android:minWidth="100dp"
        android:minHeight="48dp"
        />
    <Button
        android:id="@+id/button_addIntoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_into_total_income"
        android:minWidth="100dp"
        android:minHeight="48dp" />


</LinearLayout>